objects/OEL_Student_Application__c.object
<CustomObject><fields>
        <fullName>ACF_Academic_Concentration_Approval__c</fullName>
        <label>Fulfill Academic Concentration Approval?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>ACF_Application_Date__c</fullName>
        <label>Application Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>ACF_Applying_As__c</fullName>
        <label>Applying As</label>
        <picklist>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>ACF_Babson_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Babson Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Academic Program</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>EL_Project_Student_Applications</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Concentration__c</fullName>
        <label>Concentration</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>OEL Student name</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>OEL Student Applications</relationshipLabel>
        <relationshipName>EL_Project_Student_Applications</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_MCFE_Project_1st_choice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MCFE Project - 1st choice</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>OEL Student Applications</relationshipLabel>
        <relationshipName>OEL_Student_Applications</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_MCFE_Project_2nd_choice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MCFE Project - 2nd choice</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>OEL Student Applications (MCFE Project - 2nd choice)</relationshipLabel>
        <relationshipName>OEL_Student_Applications1</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_MCFE_Project_3rd_choice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MCFE Project - 3rd choice</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>OEL Student Applications (MCFE Project - 3rd choice)</relationshipLabel>
        <relationshipName>OEL_Student_Applications2</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_MCFE_Project_Interest_Reason__c</fullName>
        <label>MCFE Project Interest Reason</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>ACF_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Reviewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewed - assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewed - not assigned</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>ACF_Team_Members__c</fullName>
        <inlineHelpText>Team member names (If applying as Team)</inlineHelpText>
        <label>Other Team Members</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>ACF_View__c</fullName>
        <formula>HYPERLINK("/"+Id, "View")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Retains the student's Experiential Learning project (student) application data. 
Populated via Form Assembly student application.</description><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>OEL Student Application</label><nameField>
        <displayFormat>OEL-{00000000}</displayFormat>
        <label>OEL Student Application ID</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>OEL Student Applications</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>ACF_View__c</columns>
        <columns>ACF_Application_Date__c</columns>
        <columns>ACF_Contact__c</columns>
        <columns>ACF_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>Open_student_apps_by_Concentration</fullName>
        <columns>ACF_View__c</columns>
        <columns>ACF_Concentration__c</columns>
        <columns>ACF_Contact__c</columns>
        <columns>ACF_Babson_Program__c</columns>
        <columns>ACF_Status__c</columns>
        <columns>ACF_MCFE_Project_1st_choice__c</columns>
        <columns>ACF_MCFE_Project_2nd_choice__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACF_Status__c</field>
            <operation>notEqual</operation>
            <value>Reviewed - assigned</value>
        </filters>
        <label>Open student apps by Concentration</label>
        <language>en_US</language>
        <sharedTo>
            <group>CCD_EL_Users</group>
            <group>CCD_Users</group>
        </sharedTo>
    </listViews></CustomObject>